--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,9 +1,19 @@
-.news-card {
+/* .news-card {
   position: relative;
   background: #fff;
   border-radius: 16px;
   padding-bottom: 24px;
+} */
+.news-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #fff;
+  border-radius: 16px;
+  height: 100%;
 }
+
 .news-card__image {
   width: 100%;
   height: 272px;
@@ -20,7 +30,7 @@
   font-size: 18px;
   line-height: 24px;
   color: #b6bcbf;
-  margin-bottom: 12px;
+  margin: 0 0 12px;
 }
 
 .news-card__title {
@@ -50,7 +60,6 @@
   overflow: hidden;
 }
 .news-card__author {
-  position: absolute;
   font-family: "Roboto Slab" sans-serif;
   font-weight: 700;
   font-size: 16px;
@@ -58,6 +67,7 @@
   text-transform: uppercase;
   color: #b6bcbf;
   text-overflow: ellipsis;
+  overflow: hidden;
   margin: 0;
 }
 .news-card__bookmark-container {
