--- a/src/components/SaveArticles/SaveArticles.css
+++ b/src/components/SaveArticles/SaveArticles.css
@@ -14,11 +14,14 @@
 }
 
 .saved-articles__header {
-  font-family: "Roboto Slab", Gerogia, serif;
+  font-family: "Roboto Slab", sans-serif;
   font-size: 40px;
   line-height: 46px;
   font-weight: 400;
   margin: 0 0 30px;
+  color: #1a1b22;
+  max-width: 530px;
+  width: 100%;
 }
 
 .saved-articles__keywords {
@@ -38,8 +41,8 @@
   font-size: 14px;
   margin-left: 6px;
 }
-.saved-news-header { 
-  border-bottom:1px solid #D1D2D6; 
+.saved-news-header {
+  border-bottom: 1px solid #d1d2d6;
 }
 .news-card-container {
   display: grid;
@@ -51,7 +54,7 @@
   .saved-articles {
     padding: 16px;
   }
-}
-.saved-articles__header {
-  font-size: 30px;
+  .saved-articles__header {
+    font-size: 30px;
+  }
 }
