--- a/src/components/NewsGrid/NewsGrid.css
+++ b/src/components/NewsGrid/NewsGrid.css
@@ -30,11 +30,21 @@
   line-height: 24px;
   color: #1a1b22;
   padding: 20px 99px;
-  background: #e8e8e8;
+  background-color: #e8e8e8;
   border: none;
   border-radius: 80px;
   margin-top: 56px;
 }
+.news-grid__show-more:hover {
+  background: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.news-grid__show-more_clicked {
+  background-color: red;
+  transform: scale(0.98);
+}
+
 .news-grid__item {
   list-style: none;
   text-decoration: none;
