--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -55,9 +55,15 @@
 .search-form__button:hover {
   background: #347eff;
 }
-.search-form__keyword { 
-  color:red; 
-  text-align:center; 
+.search-form__button:active {
+  background: #2a65cc;
+  transform: scale(0.98);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.search-form__keyword {
+  color: red;
+  text-align: center;
 }
 @media screen and (max-width: 768px) {
   .search-form__heading {
